Add CivicConnect Eco project